--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -72,6 +72,61 @@
     margin-top: 48px;
 }
 
+.welcome-section {
 
+    background: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url('../images/Vectorrr.png');
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    width: 1320px;
+    height: 600px;
+    border-radius: 20px;
+    margin-top: 120px;
+}
+
+
+.welcome-section-info {
+    padding: 126px;
+}
+
+.welcome-section-title {
+    color: #FFF;
+    font-family: Merriweather;
+    font-size: 64px;
+    font-weight: 900;
+    line-height: 88px;
+    letter-spacing: 7.04px;
+
+}
+
+.welcome-section-description {
+    margin-top: 24px;
+    width: 697px;
+    color: rgba(255, 255, 255, 0.80);
+    font-family: Inter;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    padding-right: 40px;
+}
+
+.welcome-section-image {
+    width: 320px;
+    height: 465px;
+    padding-top: 80px;
+    
+}
+
+.btn {
+    background-color: transparent;
+    color: #FFF;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 700;
+    padding: 40px 20px;
+    border: none;
+    text-transform: uppercase;
+    margin-top: 30px;
+}
 
 
