--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -169,3 +169,85 @@
     text-transform: uppercase;
 
 }
+
+
+
+
+
+
+.event-section{
+    background: #FFF;
+    width: 1300px;
+    height: 600px;
+    margin: auto;
+    margin-top: 120px;
+    padding-left: 140;
+    display: flex;
+    gap: 600px 100px;
+    
+}
+.event-content{
+    margin-top: 120px;
+    align-items: center;
+    text-align: left;
+}
+
+.event-titel{
+    color: #F00;
+font-family: Inter;
+font-size: 24px;
+font-weight: 500;  
+
+}
+.event-info{
+    margin-top: 16px;
+    font-family: 'Merriweather', serif;
+    color: #070211;
+    font-size: 48px;
+    font-weight: 900;
+    text-transform: capitalize;
+}
+.event-description{
+    color: rgba(7, 2, 17, 0.60);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 32px; 
+    width: 393px;
+    margin-top: 22px;
+    
+}
+.event-picture{
+    width: 364px;
+    height: 364px;
+    border-radius: 463px;
+    border: 15px solid #F00;
+    border-radius: 50%;
+    padding: 30px;
+}
+
+.event-feature{
+    margin-top: 50px;
+    font-family: Inter;
+}
+.feature-year{
+   padding-top: 60px;
+    color: #F00;
+    font-family: Inter;
+    font-size: 48px;
+    font-weight: 700;
+}
+.feature-year-description{
+    width: 276px;
+    padding-right: 10px;
+    color: rgba(7, 2, 17, 0.60);
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 32px; 
+    margin-top: 16px;
+}
+.event-feature img{
+    margin-top: 43px;
+    width: 140px;
+    height: 140px;
+}
