--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -175,7 +175,7 @@
 
 
 
-.event-section{
+.event-section {
     background: #FFF;
     width: 1300px;
     height: 600px;
@@ -184,22 +184,24 @@
     padding-left: 140;
     display: flex;
     gap: 600px 100px;
-    
+
 }
-.event-content{
+
+.event-content {
     margin-top: 120px;
     align-items: center;
     text-align: left;
 }
 
-.event-titel{
+.event-titel {
     color: #F00;
-font-family: Inter;
-font-size: 24px;
-font-weight: 500;  
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
 
 }
-.event-info{
+
+.event-info {
     margin-top: 16px;
     font-family: 'Merriweather', serif;
     color: #070211;
@@ -207,17 +209,19 @@ font-weight: 500;
     font-weight: 900;
     text-transform: capitalize;
 }
-.event-description{
+
+.event-description {
     color: rgba(7, 2, 17, 0.60);
     font-family: Inter;
     font-size: 20px;
     font-weight: 400;
-    line-height: 32px; 
+    line-height: 32px;
     width: 393px;
     margin-top: 22px;
-    
+
 }
-.event-picture{
+
+.event-picture {
     width: 364px;
     height: 364px;
     border-radius: 463px;
@@ -226,28 +230,110 @@ font-weight: 500;
     padding: 30px;
 }
 
-.event-feature{
+.event-feature {
     margin-top: 50px;
     font-family: Inter;
 }
-.feature-year{
-   padding-top: 60px;
+
+.feature-year {
+    padding-top: 60px;
     color: #F00;
     font-family: Inter;
     font-size: 48px;
     font-weight: 700;
 }
-.feature-year-description{
+
+.feature-year-description {
     width: 276px;
     padding-right: 10px;
     color: rgba(7, 2, 17, 0.60);
     font-size: 20px;
     font-weight: 300;
-    line-height: 32px; 
+    line-height: 32px;
     margin-top: 16px;
 }
-.event-feature img{
+
+.event-feature img {
     margin-top: 43px;
     width: 140px;
-    height: 140px;
+    height: 140px;
+}
+
+
+/* Holidays offer section */
+
+.holiday-content {
+    text-align: center;
+    /* position: relative; */
+}
+
+.holiday-content-title {
+    color: #070211;
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.hodiday {
+    color: #F00;
+    text-align: center;
+    font-family: 'Merriweather', serif;
+    font-size: 72px;
+    font-weight: 900;
+}
+
+.holiday-content-info {
+    margin-top: 16px;
+    color: #070211;
+    font-family: 'Merriweather', serif;
+    font-size: 72px;
+    font-weight: 900;
+}
+
+.holiday-content-description {
+    color: rgba(7, 2, 17, 0.60);
+    text-align: center;
+    font-size: 20px;
+    font-weight: 500;
+    width: 1068px;
+    margin: auto;
+    margin-top: 30px;
+    padding: 0 25px;
+}
+
+/* hodiday image part  */
+
+.holiday-content-images {
+    display: flex;
+    justify-content: center;
+    margin-top: 65px;
+}
+
+
+.contribute {
+    margin-top: 50px;
+    margin-right: 100px;
+}
+
+
+.regd-img {
+    position: absolute;
+    margin-top: 380px;
+    margin-right: 510px;
+}
+
+.regd-img img {
+    margin-left: 6px;
+}
+
+.group75-img {
+    position: relative;
+
+}
+
+.group-img {
+    position: relative;
+    position: absolute;
+    margin-right: 580px;
+    margin-top: 65px;
+
 }
