--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -337,3 +337,48 @@
     margin-top: 65px;
 
 }
+
+/* portfolio section */
+
+.portfolio-section{
+    margin-top: 200px;
+    width: 1350px;
+    margin: auto;
+}
+
+.portfolio-content{
+    margin-top: 120px;
+    color: #F00;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.portfolio-title{
+    color: #070211;
+    font-family: 'Merriweather', serif;
+    font-size: 48px;
+    font-weight: 900;
+    margin-top: 16px;
+}
+.portfolio-description{
+    width: 896px;
+    margin-top: 22px;
+    color: rgba(7, 2, 17, 0.60);
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 32px; /* 160% */
+    margin-bottom: 40px;
+}
+
+.portfolio-images img:hover{
+    width:344px ;
+    height: 380px;
+}
+.portfolio-images img{
+
+    margin-right: 20px;
+    margin-top: 20px;
+    width: 424px;
+    height: 450px;
+}
