--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -340,13 +340,13 @@
 
 /* portfolio section */
 
-.portfolio-section{
+.portfolio-section {
     margin-top: 200px;
     width: 1350px;
     margin: auto;
 }
 
-.portfolio-content{
+.portfolio-content {
     margin-top: 120px;
     color: #F00;
     font-family: Inter;
@@ -354,31 +354,108 @@
     font-weight: 500;
 }
 
-.portfolio-title{
+.portfolio-title {
     color: #070211;
     font-family: 'Merriweather', serif;
     font-size: 48px;
     font-weight: 900;
     margin-top: 16px;
 }
-.portfolio-description{
+
+.portfolio-description {
     width: 896px;
     margin-top: 22px;
     color: rgba(7, 2, 17, 0.60);
     font-size: 24px;
     font-weight: 400;
-    line-height: 32px; /* 160% */
+    line-height: 32px;
+    /* 160% */
     margin-bottom: 40px;
 }
 
-.portfolio-images img:hover{
-    width:344px ;
+.portfolio-images img:hover {
+    width: 344px;
     height: 380px;
 }
-.portfolio-images img{
+
+.portfolio-images img {
 
     margin-right: 20px;
     margin-top: 20px;
     width: 424px;
-    height: 450px;
+    height: 450px;
+}
+
+/* email or subscribe part */
+.email-content {
+    margin: auto;
+    margin-top: 120px;
+    margin-bottom: 120px;
+    text-align: center;
+    width: 1320px;
+    height: 616px;
+    border-radius: 16px;
+    background: rgba(255, 0, 0, 0.05);
+
+}
+
+.email-content-info {
+    padding-top: 80px;
+}
+
+.subscribe {
+    color: #070211;
+    font-family: 'Merriweather', serif;
+    font-size: 48px;
+    font-weight: 900;
+    margin-top: 40px;
+}
+
+.email-content-description {
+    width: 896px;
+    color: rgba(7, 2, 17, 0.60);
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 32px;
+    /* 160% */
+    margin: auto;
+    text-align: center;
+    margin-top: 22px;
+}
+
+.input-form {
+    margin-top: 48px;
+    padding-bottom: 80px;
+
+}
+
+.email {
+    color: rgba(7, 2, 17, 0.30);
+    font-size: 18px;
+    font-weight: 400;
+    width: 400px;
+    height: 72px;
+    border: none;
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px;
+    padding-left: 30px;
+}
+
+.submit {
+    border-radius: 0px 50px 50px 0px;
+    background: #F00;
+    border: 0;
+    width: 210px;
+    height: 72px;
+    
+    color: #FFF;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 600;
+    padding: 24px 65px;
+
+
+
 }
