added footer section

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -36,7 +36,7 @@
     line-height: 95px;
     margin-top: 16px;
 }
-
+/* discount section */
 .section {
     background: #FFF;
     text-align: center;
@@ -70,7 +70,7 @@
     margin: auto;
     margin-top: 48px;
 }
-
+/* welcome party section */
 .welcome-section {
 
     background: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%), url('../images/Vectorrr.png');
@@ -128,7 +128,7 @@
     margin-top: 30px;
 }
 
-
+/* information section */
 .information {
     width: 1320px;
     height: 482px;
@@ -174,7 +174,7 @@
 
 
 
-
+/* upcoming event section */
 .event-section {
     background: #FFF;
     width: 1300px;
@@ -300,7 +300,7 @@
     padding: 0 25px;
 }
 
-/* hodiday image part  */
+
 
 .holiday-content-images {
     display: flex;
@@ -456,6 +456,53 @@
     font-weight: 600;
     padding: 24px 65px;
 
+}
+/* footer section */
+footer{
+    background: black;
+    padding: 120px 100px;
+    margin-top: 120px;
+}
+.footer-info{
+    display: flex;
+    justify-content: space-around;
+    color: #FFF;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500px;
+    line-height: 40px; /* 166.667% */
+}
+
+hr{
+    margin: auto;
+    margin-top: 50px ;
+    margin-bottom: 50px;
+    width: 1320px;
+    height: .1px;
+    color: rgb(23, 23, 23);
+}
+.footer-img{
+    text-align: center;
+}
+
+.footer-img img{
+    height: 64px;
+    height: 64px;
+    margin-right: 20px;
+}
+.last-footer{
+   
+    display: flex;
+    justify-content: space-around;
+    color: #FFF;
+    font-size: 24px;
+    font-weight: 500;
+   
+}
 
 
+.copyright{
+    margin-right: 600px;
+   padding-left: 120px;
+  
 }
